--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                    </button>
-                    <a href="" class="navbar-brand ">QorDigital</a>
+                    <a href="" class="navbar-brand " font-weight:"bold">QorDigital</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navi">
                  <!--------- menus------------>
@@ -377,7 +377,7 @@
 
         <!-------------Testimonial section------------->
          <br><br>
-         <section class="testimonials" id="testimonial">
+         <section class="testimonials" id="testimonial" class="darkmode-ignore">
              <div class="container">
                  <div class="row">
                      <div class="col-md-12 text-center wow fadeInDownBig">
@@ -801,7 +801,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
        <!-------------Footer--------------->
 
-       <footer class="footer">
+       <footer class="footer" class="darkmode-ignore">
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 text-center">
