--- a/index.html
+++ b/index.html
@@ -405,8 +405,9 @@
                                     <h2>Daniel Grover</h2>
                                     <h4>Sr Engineer</h4>
                                     <p>
-                                        who is such a man as does not want to get succees life <br>is not meant
-                                        For work only keep in !
+                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                  </p> <br>  Lorem ipsum dolor sit amet,
+                                        Lorem ipsum dolor sit !
                                     </p>
                                 </div>
 
@@ -415,8 +416,9 @@
                                     <h2>Daniel Grover</h2>
                                     <h4>Sr Engineer</h4>
                                     <p>
-                                        who is such a man as does not want to get succees life <br>is not meant
-                                        For work only keep in !
+                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                  </p> <br>  Lorem ipsum dolor sit amet,
+                                        Lorem ipsum dolor sit !
                                     </p>
                                 </div>
 
@@ -425,8 +427,9 @@
                                     <h2>Daniel Grover</h2>
                                     <h4>Sr Engineer</h4>
                                     <p>
-                                         who is such a man as does not want to get succees life <br>is not meant
-                                        For work only keep in !
+                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                  </p> <br>  Lorem ipsum dolor sit amet,
+                                        Lorem ipsum dolor sit !
                                     </p>
                                 </div>
 
